Affichage des Avatars après inscription
